--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -350,6 +350,11 @@ body{
                 width: 800px;
                 margin-left: 15px;
             }
+
+            .videoyoutube{
+                width: 75%;
+                aspect-ratio: 16 / 9;
+            }
         }
     }
 
